order-system-helm/templates/deployment-config-server.yaml
# spring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: order-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: roudane/config-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9101
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9101
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 10
