order-system-helm/templates/deployment-eureka-server.yaml
# spring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: order-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: roudane/eureka-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9102
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9102
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 10
