order-system-helm/templates/service-config-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: order-dev
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9101
  type: ClusterIP
